fix: display on mobile

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   transform: translateY(-150%);
   transition: transform 0.2s;
   top: 0;
-  bottom: 0;
+  /*bottom: 0;*/
   right: 0;
   z-index: 99;
   background-color: #fcecdd;
